<resources>

    <string name="app_name">CohortHub</string>

    <string name="students">Students</string>
    <string name="edit_student">Edit Student</string>
    <string name="action_logout">Logout</string>

    <string name="student_name">Thabo Jumbe</string>
    <string name="student_number">202312345</string>
    <string name="programme_short">CS</string>

    <string name="lab_group">Lab Group</string>
    <string name="lab_group_value">GO2 (11/15)</string>

    <string name="programme">Programme</string>
    <string name="programme_value">Computer Science</string>

    <string name="change_group">Change group</string>
    <string name="correct_student_number">Correct student number</string>
    <string name="edit_details">Edit details</string>
    <string name="delete_student">Delete student</string>

    <!-- Content Descriptions -->
    <string name="cd_back">Back</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="cd_edit_profile">Edit Profile</string>

    <!-- Profile Screen -->
    <string name="profile_title">Profile</string>
    <string name="lab_group_card_title">Lab Group</string>
    <string name="sync_status_card_title">Sync Status</string>
    <string name="sync_status_synced">Synced</string>
    <string name="last_updated_label">Last updated</string>
    <string name="quick_actions_title">Quick Actions</string>
    <string name="action_edit_details">Edit details</string>
    <string name="action_request_group_change">Request group change</string>
    <string name="action_request_student_number_correction">Request student number correction</string>

    <!-- Registration Screen -->
    <string name="registration_title">Create Account</string>
    <string name="registration_subtitle">Sign up to access CohortHub</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_student_number">Student Number</string>
    <string name="label_password">Password</string>
    <string name="label_programme">Programme</string>
    <string name="label_lab_group">Lab Group</string>
    <string name="hint_programme">Select programme</string>
    <string name="hint_lab_group">Select lab group</string>
    <string name="draft_notice">Draft saved</string>
    <string name="btn_save_registration">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="terms_privacy_notice">By signing up, you agree to our Terms and Privacy Policy.</string>

    <!-- Sign In Screen -->
    <string name="signin_title">Welcome Back</string>
    <string name="signin_subtitle">Sign in to continue</string>
    <string name="hint_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="register_link">Register</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_group">Group</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_profile">Profile</string>


    <!-- Dropdown data -->
    <string-array name="programme_options">
        <item>BSc Computer Science</item>
        <item>BSc Information Technology</item>
        <item>BSc Software Engineering</item>
        <item>BEng Computer Engineering</item>
        <item>Other</item>
    </string-array>

    <string-array name="lab_group_options">
        <item>G01</item>
        <item>G02</item>
        <item>G03</item>
        <item>G04</item>
    </string-array>
    <string name="cd_logo">CohortHub logo</string>

    <!-- Dialog Strings (Task 3.1) -->
    <string name="cd_close_dialog">Close dialog</string>
    <string name="dialog_editor_title">Edit Student</string>
    <string name="dialog_editor_subtitle">Modify student details and group assignment below.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="dialog_delete_title">Delete Student</string>
    <string name="dialog_delete_message">Are you sure you want to delete this student record? This action will disable their account and release their lab group slot.</string>
    <string name="btn_confirm_delete">Delete Student</string>

</resources>